[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amsr"
version = "0.1.6"
description = "Another molecular string representation"
authors = [{ name = "Harry Stern" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "rdkit",
  "networkx",
  "anytree",
  "Levenshtein",
  "typer",
  "pandas",
  "torch>=2.4,<3",   # CPU/MPS on macOS; compatible with py3.12 arm64 wheels
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=4",
  "ruff>=0.5",
  "mypy>=1.10",
]
docs = [
  "sphinx>=7.3",
  "furo>=2024.8.6",
  "myst-parser>=3.0",
  "sphinx-autodoc-typehints>=2.1",
]
gpu = [
  "torch>=2.4,<3",
  "torchvision>=0.19,<0.25",
  "torchaudio>=2.4,<3",
]

[tool.setuptools]
packages = ["amsr"]

[tool.ruff]
target-version = "py39"
line-length = 100
lint.select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["amsr"]

[tool.mypy]
python_version = "3.9"
packages = ["amsr"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = false
pretty = true
ignore_missing_imports = true
